@@ -3,18 +3,17 @@
 
 #include "main.h"
 
-void file_data_hasher_t::multihash_initialize()
+void hash_context_obj::multihash_initialize()
 {
   for (int i = 0 ; i < NUM_ALGORITHMS ; ++i)    {
-      if (hashes[i].inuse)	{	  
-	  this->hash_hex[i]="";
+      if (hashes[i].inuse) { 
 	  hashes[i].f_init(this->hash_context[i]);
 	}
     }
 }
 
 
-void file_data_hasher_t::multihash_update(const unsigned char *buf, size_t len)
+void hash_context_obj::multihash_update(const unsigned char *buf, size_t len)
 {
   // We have to copy the data being hashed from the buffer we were
   // passed into another structure because the SHA-1 update 
@@ -35,19 +34,20 @@ void file_data_hasher_t::multihash_update(const unsigned char *buf, size_t len)
  * multihash_finalizes finalizes each algorithm and converts to hex.
  * Only the hex is preserved.
  */
-void file_data_hasher_t::multihash_finalize()
+void hash_context_obj::multihash_finalize(std::string dest[])
 {
     uint16_t j;
     static char hex[] = "0123456789abcdef";
     
     for (int i = 0 ; i < NUM_ALGORITHMS ; ++i) {
+	dest[i]="";
 	if (hashes[i].inuse) {
 	    /* Calculate the residue and convert to hex */
-	    uint8_t residue[file_data_hasher_t::MAX_ALGORITHM_RESIDUE_SIZE];
+	    uint8_t residue[MAX_ALGORITHM_RESIDUE_SIZE];
 	    hashes[i].f_finalize(this->hash_context[i], residue);
 	    for (j = 0; j < hashes[i].bit_length/8 ; j++) {
-		this->hash_hex[i].push_back(hex[(residue[j] >> 4) & 0xf]);
-		this->hash_hex[i].push_back(hex[residue[j] & 0xf]);
+		dest[i].push_back(hex[(residue[j] >> 4) & 0xf]);
+		dest[i].push_back(hex[residue[j] & 0xf]);
 	    }
 	}
     }
